feat: adding inventory handling

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,7 @@
 @import './components/admin';
 @import './components/patient-details';
 @import './components/inventory';
+@import './components/consumables';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
 
