--- a/assets/css/components/_consumables.scss
+++ b/assets/css/components/_consumables.scss
@@ -5,6 +5,10 @@
   padding: 15px;
   border-radius: 20px;
   box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
+  .svg-container {
+    max-width: 117px;
+    margin: auto;
+  }
   .progressive-svg {
     z-index: 2;
   }
@@ -20,6 +24,8 @@
     bottom: 0;
     left: 0;
     right: 0;
+    font-size: 16px;
+    font-weight: bold;
   }
   .slider-beast {
     margin: 0 auto;
@@ -35,5 +41,22 @@
     width: 100%;
     background-color: #1e2b4b;
     border-radius: 22px;
+  }
+  .img-dragger-dots {
+    display: inline-block;
+    width: 100%;
+    margin-left: -200px;
+    min-width: 400px;
+    height: 16px;
+    background-image: url();
+  }
+  .drag-image {
+    position: absolute;
+    color: #2359e8;
+    left: 0;
+    z-index: 2;
+    font-weight: bold;
+    font-size: 32px;
+    right: 0;
   }
 }
