fix: minor issue fixing

--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -75,7 +75,7 @@
   }
   .dead {
     .ant-steps-item {
-      background: #fafbb6;
+      background: #ffdbdb;
     }
     .ant-steps-item-content {
       &::before {
