--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,6 +30,7 @@
 @import './components/patient-details';
 @import './components/inventory';
 @import './components/consumables';
+@import './components/support';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
 
