--- a/assets/css/components/_support.scss
+++ b/assets/css/components/_support.scss
@@ -11,7 +11,10 @@
 
 .support-chat {
   min-height: 400px;
+
   .chat-list {
-    min-height: 330px;
+    min-height: 350px;
+    max-height: 350px;
+    overflow-y: scroll;
   }
 }
