feat: text changes and  name

--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -92,3 +92,8 @@
   height: calc(100vh - 200px);
   overflow-y: scroll;
 }
+
+.chat-container-height {
+  max-height: 600px;
+  overflow-x: auto;
+}
