--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -16,6 +16,37 @@
   }
 }
 
+.pills-tabs {
+  .ant-tabs-card-bar .ant-tabs-nav-container {
+    height: auto !important;
+  }
+
+  .ant-tabs-tab-active {
+    &::before {
+      background-image: url($urlBase + '/web/icons/circle-active.svg') !important;
+    }
+  }
+
+  .ant-tabs-tab {
+    &::before {
+      background-image: url($urlBase + '/web/icons/circle.svg');
+      max-width: 40px;
+      height: 56px;
+      background-repeat: no-repeat;
+      background-position: 0, 0;
+      margin-left: 15px;
+    }
+  }
+
+  .ant-tabs.ant-tabs-card {
+    .ant-tabs-tab {
+      padding: 16px 58px;
+      line-height: initial;
+      height: auto;
+    }
+  }
+}
+
 .no-border-bottom {
   .ant-tabs-ink-bar {
     display: none !important;
@@ -24,7 +55,7 @@
 
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
   border: 1px solid #ececec;
-  border-radius: 30px;
+  border-radius: 20px;
   margin-right: 9px;
   margin-bottom: 10px;
   font-size: 14px;
@@ -37,7 +68,7 @@
 }
 
 .ant-tabs-card-bar {
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
   border-bottom: unset;
 }
 
