--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -15,21 +15,26 @@
   padding-right: 20px;
 }
 
-.p-10{
+.p-10 {
   padding: 10px;
 }
 
-p-0{
-	padding: 0 !important;
+.p-0 {
+  padding: 0 !important;
 }
+
 .pl-5 {
-    padding-left: 3rem !important;
+  padding-left: 3rem !important;
 }
 
-.pr-5{
-	padding-right: 3rem !important;
+.pr-5 {
+  padding-right: 3rem !important;
 }
 
-.pr-2{
-  padding-right : 2rem;
+.pr-2 {
+  padding-right: 2rem;
+}
+
+.pt-0 {
+  padding-top: 0 !important;
 }
