fix: minor ui changes

--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -44,8 +44,10 @@
   border-radius: 10rem;
 }
 
-.status-inprocess {
+.status-inprocess,
+.status-in {
   background-color: #ecf6fd;
+  white-space: nowrap;
 }
 
 .status-resolved {
