--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -77,7 +77,8 @@
       content: '';
       height: 20px;
       width: 20px;
-      margin-right: 5px;
+      margin-left: 3px;
+      margin-right: 3px;
       display: inline-block;
       vertical-align: middle;
       background-size: 100%;
@@ -148,6 +149,12 @@
     font-size: 12px;
     margin-top: 12px;
     // vertical-align: text-bottom;
+  }
+
+  .ant-steps-horizontal {
+    & .ant-steps-item:last-child {
+      border: 1px solid red;
+    }
   }
 }
 
