--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -28,7 +28,7 @@
   }
 
   .ant-table-tbody td {
-    padding: 15px;
+    padding: 5px; // check patient list before changing it
     font-size: 14px;
     vertical-align: middle;
     color: #233151;
@@ -60,4 +60,3 @@
     }
   }
 }
-
