--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -153,7 +153,7 @@
 
   .ant-steps-horizontal {
     & .ant-steps-item:last-child {
-      border: 1px solid red;
+      padding-right: 8px;
     }
   }
 }
