style: cosmtic changes

--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -28,7 +28,7 @@
   }
 
   .ant-table-tbody td {
-    padding: 5px; // check patient list before changing it
+    padding: 15px 5px; // check patient list before changing it
     font-size: 14px;
     vertical-align: middle;
     color: #233151;
