--- a/assets/css/components/_patient-page.scss
+++ b/assets/css/components/_patient-page.scss
@@ -2,7 +2,7 @@
   .treatmentName {
     display: inline-block;
     padding: 10px 0;
-    margin-top: 12px;
+   // margin-top: 12px;
   }
   .ant-table-content {
     .ant-table-tbody tr {
