--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -72,6 +72,14 @@
       }
     }
   }
+  .ant-upload-select-picture-card i {
+      font-size: 32px;
+      color: #999;
+  }
+  .ant-upload-select-picture-card .ant-upload-text {
+      margin-top: 8px;
+      color: #666;
+  }
   .ant-switch {
     margin-top: 10px;
     height: 40px;
