feat: minor ui chaneg

--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -10,6 +10,8 @@
 .fridge-tile {
   padding: 15px;
   border: 1px solid #8b8b8b;
+  border-radius: 22px;
+  background-color: white;
   .img {
     text-align: center;
   }
