--- a/assets/css/partials/_background-color.scss
+++ b/assets/css/partials/_background-color.scss
@@ -9,6 +9,10 @@
   background-color: #f3f6f9;
 }
 
+.bg-grey {
+  background-color: #f5f5f5;
+}
+
 .bg-secondary {
   background-color: $secondary-color;
 }
