--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -12,6 +12,7 @@
   border: 1px solid #8b8b8b;
   border-radius: 22px;
   background-color: white;
+  margin-top: 20px;
   .img {
     text-align: center;
   }
