feat: minor tweaking

--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -9,7 +9,7 @@
 
 .fridge-tile {
   padding: 15px;
-  border: 1px solid #8b8b8b;
+  border: 1px solid #d9d9d9;
   border-radius: 22px;
   background-color: white;
   margin-top: 20px;
