--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -29,6 +29,7 @@ header.ant-layout-header {
     padding-left: 15px;
     padding-right: 15px;
     margin-right: 10px;
+    margin-bottom: 19px;
     img {
       max-width: 100px;
       max-height: 24px;
