--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .main {
-  padding: 5px;
+  padding: 100px 200px;
   margin-top: 5px;
 }
 
@@ -80,6 +80,7 @@ a {
     padding: 15px;
     font-weight: bold;
     text-align: center;
+    border-radius: 22px;
 
     // why repeating code ?? check the below line
     &:first-child {
@@ -113,7 +114,8 @@ a {
   }
 }
 .page-header {
-  margin-top: 3rem;
+  margin-top: -1rem;
+  margin-bottom: 20px;
 }
 .page-title {
   font-size: 25px;
