--- a/assets/css/partials/_tabs.scss
+++ b/assets/css/partials/_tabs.scss
@@ -19,6 +19,15 @@
 .pills-tabs {
   .ant-tabs-card-bar .ant-tabs-nav-container {
     height: auto !important;
+    &::before {
+      content: '';
+      border: 1px solid #fafafa;
+      width: 80%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin-top: 30px;
+    }
   }
 
   .ant-tabs-tab-active {
@@ -56,7 +65,7 @@
 
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
   border: 1px solid #ececec;
-  border-radius: 15px;
+  border-radius: 22px;
   margin-right: 30px;
   margin-bottom: 10px;
   font-size: 20px;
