--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -89,12 +89,16 @@ a {
       border-bottom-right-radius: 40px;
       border-top-right-radius: 40px;
     }
+  }
 
-    // you may use this like in a proper way
-    &:last-child,
+  .ant-table-row td {
     &:first-child {
-      // border-bottom-right-radius: 40px;
-      // border-top-right-radius: 40px;
+      border-bottom-left-radius: 40px;
+      border-top-left-radius: 40px;
+    }
+    &:last-child {
+      border-bottom-right-radius: 40px;
+      border-top-right-radius: 40px;
     }
   }
 }
