--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -136,3 +136,10 @@ a {
   margin-top: 20px;
   margin-left: -20px;
 }
+.specific{  // for treatment process
+  .page-title {
+    font-size: 25px;
+    font-weight: 600;
+    margin-left: 5%;
+  }
+}
