fix: smart_lab_fixes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -147,3 +147,10 @@ a {
     margin-left: 5%;
   }
 }
+.specific-storage{  // for Smart-Lab-Storage
+  .page-title {
+    font-size: 25px;
+    font-weight: 600;
+    margin-left: 12%;
+  }
+}
