--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -5,6 +5,16 @@
   .ant-tabs {
     color: black;
   }
+
+  .h-tabs .ant-tabs-tab {
+    padding: 8px 25px;
+  }
+  .flag-title {
+    img {
+      margin-right: 5px;
+      font-size: 16px;
+    }
+  }
 }
 
 .fridge-tile {
