fix: inbound and outbound ui

--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -124,6 +124,18 @@
     padding: 0.5rem;
   }
 
+  .red-div-size{
+    margin-bottom: -20px;
+  .white-card {
+    text-decoration: none;
+    margin: 15px auto;
+    box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
+    color: #233151;
+    border-radius: 22px;
+    background-color: #fff;
+    padding: 0.5rem;
+  }
+}
   .search-dropdown {
     width: 100%;
   }
@@ -203,17 +215,6 @@
     .number {
       margin-left: 1.5rem;
     }
-  }
-
-  
-  .white-card {
-    text-decoration: none;
-    margin: 15px auto;
-    box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
-    color: #233151;
-    border-radius: 22px;
-    background-color: #fff;
-    padding: 0.5rem;
   }
 
   .search-dropdown {
