--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -10,6 +10,14 @@
   margin-left: 5px;
 }
 
+.ml-15{
+  margin-left: 15px;
+}
+
+.ml-110{
+  margin-left: 110px;
+}
+
 .mt-5 {
   margin-top: 5px;
 }
@@ -19,6 +27,10 @@
 }
 .mb-15 {
   margin-bottom: 15px;
+}
+
+.mb-8{
+  margin-bottom: -8px;
 }
 
 .m-0 {
