--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -15,6 +15,12 @@
       font-size: 16px;
     }
   }
+
+  .imageHeading {
+    .image-container {
+      background-color: $secondary-color;
+    }
+  }
 }
 
 .fridge-tile {
