--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -88,9 +88,9 @@
   @extend .light-shadow;
 }
 
-.date-time{
+.dated-time{
   background-color: $danger;
-  padding: 14px 37px;
+  padding: 14px 40px;
   border-radius: 22px;
   color: white;
   font-size: 28px;
