--- a/assets/css/partials/_margin.scss
+++ b/assets/css/partials/_margin.scss
@@ -10,11 +10,11 @@
   margin-left: 5px;
 }
 
-.ml-15{
+.ml-15 {
   margin-left: 15px;
 }
 
-.ml-110{
+.ml-110 {
   margin-left: 110px;
 }
 
@@ -29,7 +29,7 @@
   margin-bottom: 15px;
 }
 
-.mb-11{
+.mb-11 {
   margin-bottom: -11px;
 }
 
@@ -45,7 +45,7 @@
 }
 
 .mrt {
-  margin-top: 0.5rem !important
+  margin-top: 0.5rem !important;
 }
 
 .margin-auto {
