--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -52,6 +52,13 @@
       }
     }
   }
+
+  .filter-search {
+    border: 1px solid red;
+    .ant-form-inline .ant-form-item > .ant-form-item-label {
+      vertical-align: middle;
+    }
+  }
 }
 
 .fridge-tile {
@@ -66,10 +73,20 @@
   .location {
     color: #7a7575;
     font-size: 14px;
+    padding: 15px;
+    .anticon {
+      margin-right: 5px;
+    }
   }
   .title {
     color: #000;
-    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .icons span {
+    @extend .w-50;
+    @extend .display-inline-block;
+    @extend .float-left;
+    @extend .text-center;
   }
 }
 
